samples/_failures_safe/1761715622_c4cc63_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_80477569.c: In function ‘main’:
./samples/SAFE/__tmp_80477569.c:169:5: error: expected declaration or statement at end of input
  169 |     printf("Enter arithmetic expression: ");
      |     ^~~~~~
